--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div id="logo_text">
           <!-- class="logo_colour", allows you to change the colour of the text -->
           <h1><a href="index.html">Kehui Chen</a></h1>
-          <h2>Assistant Professor, Department of Statistics, University of Pittsburgh</h2>
-          <h2>Email: khchen [at] pitt.edu  &bull;   Tel: 412-624-8719  &bull; Office: 1800 Wesley W. Posvar Hall, Pittsburgh, PA 15213 </h2>
+          <h2>Professor, Department of Statistics, University of Pittsburgh</h2>
+          <h2>Email: khchen [at] pitt.edu  &bull; Office: 1800 Wesley W. Posvar Hall, Pittsburgh, PA 15213 </h2>
         </div>
       </div>
 
@@ -56,16 +56,14 @@
       <div id="content">
         <!-- insert the page content here -->
         <h1>About Me</h1>
-        <p>I am currently an assistant (tenure-track) professor in the <a href="http://www.stat.pitt.edu" target="_blank">Department of Statistics</a> at the <a href="http://www.pitt.edu" target="_blank">University of Pittsburgh</a>, with a joint appointment in the
-  <a href="http://www.psychiatry.pitt.edu/" target="_blank">Department of Psychiatry</a>.
+        <p>I am currently a professor in the <a href="http://www.stat.pitt.edu" target="_blank">Department of Statistics</a> at the <a href="http://www.pitt.edu" target="_blank">University of Pittsburgh</a>.
 I obtained my PhD from the <a href="http://anson.ucdavis.edu" target="_blank">Department
-  of Statistics at UC Davis</a> in June 2012 under supervision of Professor <a
-  href="http://anson.ucdavis.edu/~mueller/" target="_blank">Hans-Georg M&uuml;ller</a>, and I got my BS degree from the <a href="http://www.math.pku.edu.cn:8000/en/newpage/"target="_blank"> School of Mathematical Sciences, Peking University, China </a>, in June 2007. </p>
+  of Statistics at UC Davis</a> in June 2012, and I got my BS degree from the <a href="http://www.math.pku.edu.cn/en"target="_blank"> School of Mathematical Sciences, Peking University, China </a>, in June 2007. </p>
 
 
         <h2>Research Interest</h2>
-        <p> My statistical methodological work focuses on functional data analysis and network modeling. Recent work includes
-variance and covariance analyses for multi-way functional data, repeatedly/longitudinally observed functional data and relevant hypothesis testing, model based network estimation and inference. </p>
+        <p> My statistical methodological work focuses on functional data analysis and network modeling. Recently, my research has centered on modeling the variance and covariance structures of complex functional data and network data, as well as nonparametric prediction for functional data, relational-data and survival outcomes. 
+ </p>
         <!-- <ul>
           <li> Nonparametric mean and covariance estimation for different functional data designs.  </li>
           <li> Functional principal component analysis and its variations. </li>
@@ -73,10 +71,9 @@ variance and covariance analyses for multi-way functional data, repeatedly/longi
           <li> Classification and clustering for functional and longitudinal data. </li>
 <li> Model based network estimation and inference. </li>
         </ul> -->
-<p>My applied work focuses on statistical methods for translational neuroscience in mental health studies, including network modeling for brain functional connectivity study, mixed model analysis for various longitudinal designs, regression, clustering and classification for trajectories of symptoms and biomarkers. 
- </p>
+<p>My applied work focuses on statistical methods in mental health studies, including translational neuroscience in schizophrenia studies and biomarker identification and prediction in suicide studies. </p>
 
-<h3> Research Grants </h3> <a href="http://www.stat.pitt.edu/khchen/currentGrant.pdf" target="_blank"> current </a>  
+ <a href="http://www.stat.pitt.edu/khchen/cv_kehuichen.pdf" target="_blank"> curriculum vitae  </a>  
           <!-- <h2  style="margin-top: -15px;">Currently Teaching</h2>
           <p>Spring 2014: <a
         href="spring14.html">36-752, Advanced Probability Overview</a></p> -->
